# fibbot

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: test.yml
src/: extract.rs  get_pull_request.rs  main.rs  nacci.rs  num.rs  post.rs
