[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.43.0" 
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[toolchain]
channel = "stable"
